tidying up repository and importing sampled_clusters:  - ignoring packrat source files,  - removing / ignoring desktop.ini / .Rhistory
 - map now loads sampled clusters only on load.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # list of files ignored by git (neither pulled nor pushed)
 *.yml
 packrat/lib*/
+packrat/src*/
+.Rhistory
 .Rproj.user
+desktop.ini
