--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
+Faker==4.0.0
 Fiona==1.8.13
 GDAL==2.4.2
 geojson==2.5.0
@@ -24,4 +25,5 @@ PyYAML==5.2
 requests==2.22.0
 Shapely==1.6.4.post2
 six==1.12.0
+text-unidecode==1.3
 urllib3==1.25.6
